--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div id="green" class="item">1</div>
+		<div id="red" class="item">2</div>
+		<div id="blue" class="item">3</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
